# normative-diversity-repro

./: .gitignore  EBNeRD Analysis.ipynb  EBNeRD Results.ipynb  MIND Analysis.ipynb  MIND Results.ipynb  PRODUCTION_RERANKER_USAGE.md  README.md  Results.ipynb  Simulation.ipynb  compute_radio.py  compute_radio_sampled.py  config.py  extend_candidates.py  generate_baselines.py  generate_baselines_ebnerd.py  generate_baselines_mind.py  main_small.py  preprocess_ebnerd_news.py  pyproject.toml  radio_small.py  repro_calibration.py  requirements.txt  topic_calibration.py  topic_calibration_retrieval.py  utils.py
dart/metrics/: alternative_voices.py  calibration.py  fragmentation.py
notebooks/: Adressa Results.ipynb  MIND Results.ipynb  Sample Analysis.ipynb
results/: topic_calibration_10_sample_1.csv
scripts/: compute_radio.py  evaluate_production_reranker.py  generate_baselines_adressa.py  generate_baselines_ebnerd.py  generate_baselines_mind.py  preprocess_adressa_news.py  preprocess_ebnerd_news.py  preprocess_mind_news.py
src/: config.py  rerank.py  sentiment_models.py  story_clustering.py  text_complexity.py  utils.py
src/dart/metrics/: activation.py  calibration.py  representation.py
